@@ -110,6 +110,10 @@ public class CreateCourseJSONRequestController extends JSONRequestController {
    *   <dd>The beginning date of the course, as a timestamp in ms.</dd>
    *   <dt><code>endDate</code></dt>
    *   <dd>The end date of the course, as a timestamp in ms.</dd>
+   *   <dt><code>signupStart</code></dt>
+   *   <dd>The start date of the course sign up, as a timestamp in ms.</dd>
+   *   <dt><code>signupEnd</code></dt>
+   *   <dd>The end date of the course sign up, as a timestamp in ms.</dd>
    *   <dt><code>enrolmentTimeEnd</code></dt>
    *   <dd>The time when enrollment for the course ends, as a timestamp in ms.</dd>
    *   <dt><code>courseLength</code></dt>
@@ -281,6 +285,8 @@ public class CreateCourseJSONRequestController extends JSONRequestController {
     Module module = moduleDAO.findById(requestContext.getLong("module"));
     Date beginDate = requestContext.getDate("beginDate");
     Date endDate = requestContext.getDate("endDate");
+    Date signupStart = requestContext.getDate("signupStart");
+    Date signupEnd = requestContext.getDate("signupEnd");
     Date enrolmentTimeEnd = requestContext.getDate("enrolmentTimeEnd");
     Long maxParticipantCount = requestContext.getLong("maxParticipantCount");
     Double distanceTeachingDays = requestContext.getDouble("distanceTeachingDays");
@@ -315,7 +321,7 @@ public class CreateCourseJSONRequestController extends JSONRequestController {
       }
     }
     
-    Course course = courseDAO.create(module, organization, name, nameExtension, courseState, courseType, beginDate, endDate,
+    Course course = courseDAO.create(module, organization, name, nameExtension, courseState, courseType, beginDate, endDate, signupStart, signupEnd,
         distanceTeachingDays, localTeachingDays, teachingHours, distanceTeachingHours, planningHours, 
         assessingHours, description, maxParticipantCount, courseFee, courseFeeCurrency, enrolmentTimeEnd, loggedUser);
 
@@ -410,8 +416,8 @@ public class CreateCourseJSONRequestController extends JSONRequestController {
       name = (String) parameterNames.nextElement();
       if (name.startsWith("educationType.")) {
         String[] nameElements = name.split("\\.");
-        Long educationTypeId = new Long(nameElements[1]);
-        Long educationSubtypeId = new Long(nameElements[2]);
+        Long educationTypeId = Long.valueOf(nameElements[1]);
+        Long educationSubtypeId = Long.valueOf(nameElements[2]);
         Vector<Long> v = chosenEducationTypes.containsKey(educationTypeId) ? chosenEducationTypes.get(educationTypeId) : new Vector<Long>();
         v.add(educationSubtypeId);
         if (!chosenEducationTypes.containsKey(educationTypeId)) {
