@@ -88,30 +88,33 @@ public class EditStudentJSONRequestController extends JSONRequestController2 {
 
   @Override
   protected boolean checkAccess(RequestContext requestContext) {
-    UserDAO userDAO = DAOFactory.getInstance().getUserDAO();
+    StaffMemberDAO staffMemberDAO = DAOFactory.getInstance().getStaffMemberDAO();
     PersonDAO personDAO = DAOFactory.getInstance().getPersonDAO();
 
     Long loggedUserId = requestContext.getLoggedUserId();
-    User user = userDAO.findById(loggedUserId);
+    StaffMember staffMember = staffMemberDAO.findById(loggedUserId);
 
-    if (!Permissions.instance().hasEnvironmentPermission(user, PyramusViewPermissions.EDIT_STUDENT)) {
+    if (!Permissions.instance().hasEnvironmentPermission(staffMember, PyramusViewPermissions.EDIT_STUDENT)) {
       return false;
-    } else {
-      if (UserUtils.canAccessAllOrganizations(user)) {
-        return true;
-      } else {
-        Long personId = requestContext.getLong("personId");
-        Person person = personDAO.findById(personId);
-        
+    }
+    else {
+      Long personId = requestContext.getLong("personId");
+      Person person = personDAO.findById(personId);
+
+      // #1416: Staff members may only access students of their specified study programmes
+      if (UserUtils.canAccessStudent(staffMember, person)) {
+        if (UserUtils.canAccessAllOrganizations(staffMember)) {
+          return true;
+        }
         for (Student student : person.getStudents()) {
-          if (UserUtils.isMemberOf(user, student.getOrganization())) {
+          if (UserUtils.isMemberOf(staffMember, student.getOrganization())) {
             // Having one common organization is enough - though the view may not allow editing all
             return true;
           }
         }
-
-        return false;
       }
+
+      return false;
     }
   }
   
@@ -170,7 +173,7 @@ public class EditStudentJSONRequestController extends JSONRequestController2 {
         // #1108: Existing credential deletion
         if (userIdentification != null && NumberUtils.isNumber(userIdentification.getExternalId())) {
           InternalAuthDAO internalAuthDAO = DAOFactory.getInstance().getInternalAuthDAO();
-          InternalAuth internalAuth = internalAuthDAO.findById(new Long(userIdentification.getExternalId()));
+          InternalAuth internalAuth = internalAuthDAO.findById(Long.valueOf(userIdentification.getExternalId()));
           if (internalAuth != null) {
             internalAuthDAO.delete(internalAuth);
           }
@@ -234,7 +237,7 @@ public class EditStudentJSONRequestController extends JSONRequestController2 {
       for (int i = 0; i < personVariableCount; i++) {
         String colPrefix = "personVariablesTable." + i;
         Long edited = requestContext.getLong(colPrefix + ".edited");
-        if (Objects.equals(new Long(1), edited)) {
+        if (Objects.equals(Long.valueOf(1), edited)) {
           String variableKey = requestContext.getString(colPrefix + ".key");
           String variableValue = requestContext.getString(colPrefix + ".value");
           personVariableDAO.setPersonVariable(person, variableKey, variableValue);
@@ -326,7 +329,7 @@ public class EditStudentJSONRequestController extends JSONRequestController2 {
         for (int i = 0; i < variableCount; i++) {
           String colPrefix = "variablesTable." + student.getId() + "." + i;
           Long edited = requestContext.getLong(colPrefix + ".edited");
-          if (Objects.equals(new Long(1), edited)) {
+          if (Objects.equals(Long.valueOf(1), edited)) {
             String variableKey = requestContext.getString(colPrefix + ".key");
             String variableValue = requestContext.getString(colPrefix + ".value");
             userVariableDAO.setUserVariable(student, variableKey, variableValue);
